<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_group_bg"
        android:orientation="vertical"
        android:weightSum="3"
        tools:context=".activities.MainActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_l" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_toRightOf="@id/logo"
                android:fontFamily="@font/sf_pro_bold"
                android:text="@string/locanix"
                android:textColor="@color/logo_color"
                android:textSize="@dimen/_17sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:src="@drawable/img1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img1"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_20sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/server"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <EditText
                android:id="@+id/mServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/textview_bg"
                android:fontFamily="@font/sf_pro_display"
                android:hint="@string/ex"
                android:paddingVertical="@dimen/_10sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/mConnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/dark_bg"
                android:fontFamily="@font/sf_pro_display"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/connect"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp" />
        </LinearLayout>

    </LinearLayout>
</layout>