<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/loginLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_group_bg"
        android:orientation="vertical"
        android:weightSum="2"
        tools:context=".activities.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_l" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_toRightOf="@id/logo"
                    android:fontFamily="@font/sf_pro_bold"
                    android:text="@string/locanix"
                    android:textColor="@color/logo_color"
                    android:textSize="@dimen/_17sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:src="@drawable/ic_img2" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:id="@+id/mServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:background="@drawable/dark_bg"
                android:backgroundTint="@color/white"
                android:drawableEnd="@drawable/ic_swap"
                android:fontFamily="@font/sf_pro_display"
                android:hint="@string/ex1"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_13sdp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/mUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mServer"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/dark_bg"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/sf_pro_display"
                android:hint="@string/uname"
                android:maxLines="1"
                android:padding="@dimen/_5sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_13sdp" />

            <EditText
                android:id="@+id/mPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mUsername"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/dark_bg"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_pswd"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/sf_pro_display"
                android:hint="@string/pswd"
                android:maxLines="1"
                android:padding="@dimen/_5sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/mLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mPassword"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/dark_bg"
                android:backgroundTint="@color/purple"
                android:fontFamily="@font/sf_pro_display"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />
        </RelativeLayout>
    </LinearLayout>
</layout>