<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/vehicleInfoRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/mainLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_2sdp"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/_3sdp"
                app:cardBackgroundColor="@color/hint_color"
                app:cardCornerRadius="@dimen/_2sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/mVehicleImg1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_truck_bg"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/ic_truck" />

                <TextView
                    android:id="@+id/mVehiclenumber1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/mVehicleImg1"
                    android:fontFamily="@font/poppins"
                    android:paddingLeft="@dimen/_10sdp"
                    android:text="@string/vehicle_no"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mVehiclenumber1"
                    android:layout_toRightOf="@id/mVehicleImg1"
                    android:paddingLeft="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/last_seen_lbl"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/mLastseen1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/tv1"
                        android:fontFamily="@font/poppins"
                        android:text="@string/last_seen"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_10sdp" />
                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/mRoot1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_pin"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/poppins"
                android:maxLines="1"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/root"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mainLL"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_tablayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:theme="@style/TabLayout_Theme"
                app:tabIndicator="@drawable/ic_tab"
                app:tabIndicatorColor="@color/sky_blue"
                app:tabMode="scrollable"
                app:tabRippleColor="@null"
                app:tabTextColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hint_color" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/tab_viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </LinearLayout>

    </RelativeLayout>
</layout>