<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.MapFragment">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/dark_bg"
            android:backgroundTint="@color/white">

            <EditText
                android:id="@+id/mSearchET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_40sdp"
                android:background="@null"
                android:fontFamily="@font/sf_pro_display"
                android:hint="@string/search"
                android:imeOptions="actionDone"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/_13sdp" />

            <ImageView
                android:id="@+id/mMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/_10sdp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_search" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/mainCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/_3sdp"
                    app:cardBackgroundColor="@color/hint_color"
                    app:cardCornerRadius="@dimen/_2sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp">

                    <ImageView
                        android:id="@+id/mVehicleImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_truck_bg"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/ic_truck" />

                    <TextView
                        android:id="@+id/mVehiclenumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/mVehicleImg"
                        android:fontFamily="@font/poppins"
                        android:paddingLeft="@dimen/_10sdp"
                        android:text="@string/vehicle_no"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mVehiclenumber"
                        android:layout_toRightOf="@id/mVehicleImg"
                        android:paddingLeft="@dimen/_10sdp">

                        <TextView
                            android:id="@+id/tv1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:text="@string/last_seen_lbl"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/_10sdp" />

                        <TextView
                            android:id="@+id/mLastseen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/tv1"
                            android:fontFamily="@font/poppins"
                            android:text="@string/last_seen"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/_10sdp" />
                    </RelativeLayout>

                </RelativeLayout>

                <TextView
                    android:id="@+id/mRoot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_pin"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/poppins"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/_10sdp"
                    android:text="@string/root"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_11sdp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loader" />

    </RelativeLayout>
</layout>